# sensorpush

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  annotate_elastic_apm.py  api.py  compose.yml  database.py  es.py  main.py  models.py  pyproject.toml  sensorpush_deployment.yaml  sensorpush_pv.yaml  sensorpush_pvc.yaml  utils.py
app/: .dockerignore  Dockerfile  app.py  database.py  models.py
app/config/: __init__.py  settings.toml
app/requirements/: dev.in  dev.txt  prod.in  prod.txt
config/: .env-example  .secrets.sample.toml  settings.sample.toml  settings.toml
elasticsearch/: create_sensorpush_settings.sh  sensorpush_index_mappings.json  sensorpush_index_settings.json  sensorpush_index_template.json
